K3S/tools/graylog-stack/mongodb/gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express
  namespace: graylog-stack
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
