K3S/tools/graylog-stack/mongodb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: graylog-stack
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-svc
  namespace: graylog-stack
spec:
  selector:
    app: mongodb-express
  ports:
    - port: 8081
      targetPort: 8081
